--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,13 @@ p2 {
     color: #333;
 }
 
+p3 {
+    font-size: 1.0em;
+	font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
+    line-height: 1.1em;
+    color: #333;
+}
+
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
@@ -60,4 +67,10 @@ ul.posts {
 
 ul.posts li {
     list-style: none;
+}
+
+
+.robot {
+	width: 100px;
+	padding: 10px 10px;
 }
