--- a/css/main.css
+++ b/css/main.css
@@ -2,32 +2,59 @@ body {
     margin: 60px auto;
     width: 70%;
 }
+
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
 }
+
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
+
 a {
     text-decoration: none;
     color: #999;
 }
+
 a:hover {
     text-decoration: underline;
 }
+
 h1 {
+	font-family:'Helvetica', 'Arial', 'Sans-Serif';
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
+
+h2 {
+	font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-size: 3em;
+}
+
 p {
     font-size: 1.5em;
+	font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
     line-height: 1.4em;
     color: #333;
 }
+
+p2 {
+    font-size: 1.3em;
+	font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
+    line-height: 1.5em;
+    color: #333;
+}
+
+p3 {
+    font-size: 1.0em;
+	font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
+    line-height: 1.1em;
+    color: #333;
+}
+
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
@@ -40,4 +67,10 @@ ul.posts {
 
 ul.posts li {
     list-style: none;
+}
+
+
+.robot {
+	width: 100px;
+	padding: 10px 10px;
 }
