--- a/game_development/css/main.css
+++ b/game_development/css/main.css
@@ -18,6 +18,10 @@ nav ul li, footer ul li {
 a {
     text-decoration: none;
     color: #999;
+    padding: 20px 20px;
+    font-size: 1.5em;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    background-color: lightblue;
 }
 
 a:hover {
@@ -66,6 +70,11 @@ ul.posts li {
     list-style: none;
 }
 
+/* div { position:fixed; width:50%; height:50% } */
+#NW { background:orange; height: 325px  }
+#NE { background:blue; height: 325px     }
+
+.text_pad {}
 
 .robot {
 	width: 100px;
@@ -75,4 +84,15 @@ ul.posts li {
 .screenshot {
 	width: 520px;
 	padding: 10px 10px;
+}
+
+.screenshot_big {
+	width: 620px;
+	padding: 10px 10px;
+}
+
+
+.icon {
+	height: 250px;
+  padding: 0px 30px
 }
