--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,16 @@ ul.posts li {
     list-style: none;
 }
 
+/* div { position:fixed; width:50%; height:50% } */
+#NW { background:orange; height: 325px  }
+#NE { background:blue; height: 325px     }
+
+a.border {
+  text-decoration: none;
+  color: #999;
+  padding: 20px 20px;
+  background-color: lightblue;
+}
 
 .robot {
 	width: 100px;
@@ -78,4 +88,14 @@ ul.posts li {
 .screenshot {
 	width: 360px;
 	padding: 10px 10px;
+}
+
+.screenshot_big {
+	width: 700px;
+	padding: 10px 10px;
+}
+
+.icon {
+	height: 250px;
+  padding: 0px 30px
 }
