--- a/game_development/css/main.css
+++ b/game_development/css/main.css
@@ -18,10 +18,6 @@ nav ul li, footer ul li {
 a {
     text-decoration: none;
     color: #999;
-    padding: 20px 20px;
-    font-size: 1.5em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    background-color: lightblue;
 }
 
 a:hover {
@@ -35,11 +31,14 @@ h1 {
 
 h2 {
 	font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    font-size: 1.5em;
+    font-size: 3em;
 }
 
 p {
-	 font-family: 'Courier New', monospace; color: #333;
+    font-size: 1.5em;
+	font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
+    line-height: 1.4em;
+    color: #333;
 }
 
 p2 {
@@ -74,7 +73,12 @@ ul.posts li {
 #NW { background:orange; height: 325px  }
 #NE { background:blue; height: 325px     }
 
-.text_pad {}
+a.border {
+  text-decoration: none;
+  color: #999;
+  padding: 20px 20px;
+  background-color: lightblue;
+}
 
 .robot {
 	width: 100px;
@@ -82,15 +86,14 @@ ul.posts li {
 }
 
 .screenshot {
-	width: 520px;
+	width: 360px;
 	padding: 10px 10px;
 }
 
 .screenshot_big {
-	width: 620px;
+	width: 700px;
 	padding: 10px 10px;
 }
-
 
 .icon {
 	height: 250px;
