--- a/endless_arc/css/main.css
+++ b/endless_arc/css/main.css
@@ -12,10 +12,17 @@ body {
 .center-size {
 	display: block;
 	text-align: center;
-	max-width: 80%;
-    max-height: 70vh;
-    margin: auto;
+  margin: auto;
+	/* max-width: 100%;
+	max-height: 100%; */
+	width: calc(50%);
+	height: auto;
 	padding: 14px 16px;
+	image-rendering: -webkit-crisp-edges;
+	image-rendering: -moz-crisp-edges;
+	image-rendering: crisp-edges;
+	image-rendering: pixelated;
+	-ms-interpolation-mode: nearest-neighbor;
 }
 
 .bg {
